WebCore/wml/WMLGoElement.cpp
@@ -25,6 +25,7 @@
 
 #include "Attribute.h"
 #include "FormData.h"
+#include "FormDataBuilder.h"
 #include "FormSubmission.h"
 #include "Frame.h"
 #include "FrameLoader.h"
